--- a/index.html
+++ b/index.html
@@ -1,94 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portfolio</title>
-    <style>
-        /* Estilos CSS aquí */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            border-radius: 8px;
-            margin-top: 20px;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #333;
-            padding: 5px 10px;
-            border-bottom: 2px solid transparent;
-            transition: border-bottom 0.3s ease;
-        }
-        nav ul li a:hover {
-            border-bottom: 2px solid #333;
-        }
-        .content {
-            margin-top: 20px;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            padding-top: 10px;
-            border-top: 1px solid #ccc;
-        }
-    </style>
+    <title>albpenal Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Mi Portfolio</h1>
-            <p>Bienvenido/a a mi portfolio personal</p>
+            <h1>Hello!</h1>
+            <h2>I'm Alberto Peñalba Martos</h2>
+            <h2><div class="text one">&#123</div>
+                <div class="text one">V</div>
+                <div class="text one">i</div>
+                <div class="text one">d</div>
+                <div class="text one">e</div>
+                <div class="text one">o</div>
+                <div class="text one">g</div> 
+                <div class="text one">a</div> 
+                <div class="text one">m</div> 
+                <div class="text one">e</div> &nbsp
+                <div class="text one">D</div> 
+                <div class="text one">e</div> 
+                <div class="text one">v</div> 
+                <div class="text one">e</div> 
+                <div class="text one">l</div> 
+                <div class="text one">o</div> 
+                <div class="text one">p</div> 
+                <div class="text one">e</div> 
+                <div class="text one">r</div>
+                <div class="text one">&#125</div> </h2>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#sobre-mi">Sobre mí</a></li>
-                    <li><a href="#proyectos">Proyectos</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#About me">About me</a></li>
+                    <li><a href="#Portfolio">Portfolio</a></li>
+                    <li><a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <section id="inicio" class="content">
-            <h2>Inicio</h2>
-            <p>Breve introducción o declaración de objetivos.</p>
+        <section id="About me" class="content">
+            <h2>About me</h2>
+            <p>I'm a Videogame Developer student at Universidad Complutense de Madrid.
+                I am currently searching an intership that can be recognized by the university. </p>
         </section>
-        <section id="sobre-mi" class="content">
-            <h2>Sobre mí</h2>
-            <p>Información personal, habilidades y experiencia.</p>
-        </section>
-        <section id="proyectos" class="content">
-            <h2>Proyectos</h2>
+        <section id="Portfolio" class="content">
+            <h2>Portfolio</h2>
             <p>Lista de proyectos destacados con enlaces y descripciones.</p>
         </section>
-        <section id="contacto" class="content">
-            <h2>Contacto</h2>
-            <p>Información de contacto y formulario de contacto si es necesario.</p>
+        <section id="Contact" class="content">
+            <h2>Contact</h2>
+                <p>
+                    📧 <a href="mailto:alberto.penalbamartos@gmail.com">alberto.penalbamartos@gmail.com</a>
+                </p>
+                <p>
+                    🔗 <a href="https://www.linkedin.com/in/alberto-pe%C3%B1alba-martos-585775335/" target="_blank">LinkedIn</a>
+                </p>
+                <p>
+                    🔗 <a href="https://github.com/albpenal" target="_blank">Github</a>
+                </p>
+                <p>
+                    📍 Madrid, Spain
+                </p>
+            </section>
+            
         </section>
         <footer>
-            <p>&copy; 2025 Mi Portfolio. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Alberto Peñalba Martos.</p>
         </footer>
     </div>
+    <!-- Importa el script externo -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
