--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section id="Portfolio" class="content">
             <h2>Portfolio</h2>
-            <p>Lista de proyectos destacados con enlaces y descripciones.</p>
+            <p>In progress</p>
         </section>
         <section id="Contact" class="content">
             <h2>Contact</h2>
