--- a/index.html
+++ b/index.html
@@ -63,32 +63,36 @@
             <p>In progress</p>
             <div class="grid">
                 <!-- 9 elementos de portfolio -->
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+
+                <!-- Cursed Cave -->
+                <div class="portfolio-item" onclick="openModal('Cursed Cave', 'Github <a href=&quot;https://github.com/Proyectos1-FDI-UCM/c2022-Grupo02&quot; target=&quot;_blank&quot;>here</a>', 'assets/cursedCave.mp4')">
+                <img src="assets/cursedCave.png" alt="Cursed Cave">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+
+                <!-- Proyecto 1 -->
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 1">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 2">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 3">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 4">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 5">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 6">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 7">
                 </div>
-                <div class="portfolio-item" onclick="openModal()">
-                    <img src="assets/FORGE-Logo.png" alt="Project Image">
+                <div class="portfolio-item" onclick="openModal('Proyecto 1', 'Descripción del proyecto 1', 'video1.mp4')">
+                    <img src="assets/FORGE-Logo.png" alt="Proyecto 8">
                 </div>
             </div>
         </section>
@@ -97,11 +101,11 @@
         <div id="modal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeModal()">&times;</span>
-                <h2>TO DO</h2>
-                <p>Project description goes here.</p>
-                <video controls>
+                <h2 id="modal-title">Título del Proyecto</h2>
+                <p id="modal-description">Descripción aquí</p>
+                <video id="modal-video" controls>
                     <source src="" type="video/mp4">
-                    Your browser does not support the video tag.
+                    Tu navegador no soporta videos.
                 </video>
             </div>
         </div>
@@ -127,13 +131,6 @@
     <!-- Importa el script externo -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="js/script.js"></script>
-    <script>
-        function openModal() {
-            document.getElementById('modal').style.display = 'flex';
-        }
-        function closeModal() {
-            document.getElementById('modal').style.display = 'none';
-        }
-    </script>
+   
 </body>
 </html>
