--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="text one">&#125</div> </h2>
             </div>
             <!-- Imagen -->
-            <img src="assets/foto carnet.png" alt="Foto de Alberto" class="profile-pic">
+            <img src="assets/images/foto carnet.png" alt="Foto de Alberto" class="profile-pic">
         </header>
 
         <nav> <!-- Índice -->
@@ -67,22 +67,43 @@
                 <!-- Cursed Cave -->
                 <div class="portfolio-item" onclick="openModal('Cursed Cave', 
                 '<a href=&quot;https://github.com/Proyectos1-FDI-UCM/c2022-Grupo02&quot; target=&quot;_blank&quot;>Github here</a>',
-                 'assets/cursedCave.mp4')">
-                <img src="assets/cursedCave.png" alt="Cursed Cave">
+                 'assets/videos/cursedCave.mp4')">
+                <img src="assets/images/cursedCave.png" alt="Cursed Cave">
                 </div>
 
                 <!-- Forge -->
                 <div class="portfolio-item" onclick="openModal('Forge', 
                 'Both games were fully made using Forge, our own videogame engine, <a href=&quot;https://github.com/UCM-FDI-DISIA/FORGE&quot; target=&quot;_blank&quot;>github here</a>',
-                'assets/forge.mkv')">
-                    <img src="assets/FORGE-Logo.png" alt="Forge">
+                'assets/videos/forge.mkv')">
+                    <img src="assets/images/FORGE-Logo.png" alt="Forge">
                 </div>
 
                 <!-- Flappy Halloween -->
                 <div class="portfolio-item" onclick="openModal('Flappy Halloween',
                  '<a href=&quot;https://github.com/albpenal/PFinalSonido&quot; target=&quot;_blank&quot;>Github here</a>',
-                  'assets/flappy.mkv')">
-                    <img src="assets/Flappy.png" alt="Flappy Halloween">
+                  'assets/videos/flappy.mkv')">
+                    <img src="assets/images/Flappy.png" alt="Flappy Halloween">
+                </div>
+
+                <!-- Puzzle Booble -->
+                <div class="portfolio-item" onclick="openModal('Puzzle Booble',
+                 '<a href=&quot;https://github.com/Dorjeekhb/MOVILES-G09-&quot; target=&quot;_blank&quot;>Github here</a>',
+                  'assets/videos/puzzlebooble.mp4')">
+                    <img src="assets/images/puzzlebooble.png" alt="Puzzle Booble">
+                </div>
+
+                <!-- CatGame -->
+                <div class="portfolio-item" onclick="openModal('VR Cat Game',
+                 'VR game, <a href=&quot;https://github.com/PabloGonzalezArroyoo/EIRV-Unity&quot; target=&quot;_blank&quot;>github here</a>',
+                  'assets/videos/eirv.mp4')">
+                    <img src="assets/images/catgame.png" alt="VR Cat Game">
+                </div>
+
+                <!-- FentaBird -->
+                <div class="portfolio-item" onclick="openModal('FentaBird',
+                 'Augmented reality game, <a href=&quot;https://drive.google.com/drive/folders/1GxwjmwgvbQ84Bx972fMa2JWdFA0BR6rU?usp=sharing&quot; target=&quot;_blank&quot;>link here</a>',
+                  'assets/videos/fentabird.mp4')">
+                    <img src="assets/images/fentabird.png" alt="FentaBird">
                 </div>
             </div>
         </section>
